--- a/code/second_attempt.ipynb
+++ b/code/second_attempt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend(playlist_id, row_data, file, playlists):\n",
+    "def recommend(playlist_id, playlists):\n",
     "    target_playlist = grouped_playlists.loc[playlist_id]\n",
+    "    \n",
+    "    row_data = similarity_matrix[playlist_id,:]\n",
     "\n",
     "    reverse_similarity_ranking = np.argsort(row_data.todense())\n",
     "\n",
@@ -119,8 +121,9 @@
     "            if track not in target_playlist and recommendations < 10:\n",
     "                recommendations += 1\n",
     "                to_be_recommended.append(track)\n",
-    "                \n",
-    "    print_to_file(playlist_id, to_be_recommended, file)"
+    "    \n",
+    "    return to_be_recommended\n",
+    "    "
    ]
   },
   {
@@ -134,10 +137,139 @@
     "\n",
     "for playlist in target_playlists.itertuples(index=True, name='Pandas'):\n",
     "    playlist_id = getattr(playlist, \"playlist_id\")\n",
-    "    row_data = similarity_matrix[playlist_id,:]\n",
-    "    recommend(playlist_id, row_data, file, grouped_playlists)\n",
+    "    to_be_recommended = recommend(playlist_id, grouped_playlists)\n",
+    "    print_to_file(playlist_id, to_be_recommended, file)\n",
     "\n",
     "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def precision(is_relevant, relevant_items):\n",
+    "\n",
+    "    #is_relevant = np.in1d(recommended_items, relevant_items, assume_unique=True)\n",
+    "\n",
+    "    precision_score = np.sum(is_relevant, dtype=np.float32) / len(is_relevant)\n",
+    "\n",
+    "    return precision_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "def recall(is_relevant, relevant_items):\n",
+    "\n",
+    "    #is_relevant = np.in1d(recommended_items, relevant_items, assume_unique=True)\n",
+    "\n",
+    "    recall_score = np.sum(is_relevant, dtype=np.float32) / relevant_items.shape[0]\n",
+    "\n",
+    "    return recall_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "def MAP(is_relevant, relevant_items):\n",
+    "\n",
+    "    #is_relevant = np.in1d(recommended_items, relevant_items, assume_unique=True)\n",
+    "\n",
+    "    # Cumulative sum: precision at 1, at 2, at 3 ...\n",
+    "    p_at_k = is_relevant * np.cumsum(is_relevant, dtype=np.float32) / (1 + np.arange(is_relevant.shape[0]))\n",
+    "\n",
+    "    map_score = np.sum(p_at_k) / np.min([relevant_items.shape[0], is_relevant.shape[0]])\n",
+    "\n",
+    "    return map_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "def evaluate_algorithm(URM_test):\n",
+    "\n",
+    "    cumulative_precision = 0.0\n",
+    "    cumulative_recall = 0.0\n",
+    "    cumulative_MAP = 0.0\n",
+    "\n",
+    "    num_eval = 0\n",
+    "\n",
+    "    n_users = URM_test.shape[0]\n",
+    "\n",
+    "\n",
+    "    for user_id in range(n_users):\n",
+    "\n",
+    "        if user_id % 10000 == 0:\n",
+    "            print(\"Evaluated user {} of {}\".format(user_id, n_users))\n",
+    "\n",
+    "        start_pos = URM_test.indptr[user_id]\n",
+    "        end_pos = URM_test.indptr[user_id+1]\n",
+    "\n",
+    "        if end_pos-start_pos>0:\n",
+    "\n",
+    "            relevant_items = URM_test.indices[start_pos:end_pos]\n",
+    "\n",
+    "            recommended_items = recommend(user_id, grouped_playlists)\n",
+    "            num_eval+=1\n",
+    "\n",
+    "            is_relevant = np.in1d(recommended_items, relevant_items, assume_unique=True)\n",
+    "\n",
+    "            cumulative_precision += precision(is_relevant, relevant_items)\n",
+    "            cumulative_recall += recall(is_relevant, relevant_items)\n",
+    "            cumulative_MAP += MAP(is_relevant, relevant_items)\n",
+    "\n",
+    "\n",
+    "    cumulative_precision /= num_eval\n",
+    "    cumulative_recall /= num_eval\n",
+    "    cumulative_MAP /= num_eval\n",
+    "\n",
+    "    print(\"Recommender performance is: Precision = {:.4f}, Recall = {:.4f}, MAP = {:.4f}\".format(\n",
+    "        cumulative_precision, cumulative_recall, cumulative_MAP))\n",
+    "\n",
+    "    result_dict = {\n",
+    "        \"precision\": cumulative_precision,\n",
+    "        \"recall\": cumulative_recall,\n",
+    "        \"MAP\": cumulative_MAP,\n",
+    "    }\n",
+    "\n",
+    "    return result_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data_splitter import train_test_holdout\n",
+    "\n",
+    "URM_train, URM_test = train_test_holdout(URM_csr, train_perc = 0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluated user 0 of 50446\n",
+      "Evaluated user 10000 of 50446\n",
+      "Evaluated user 20000 of 50446\n",
+      "Evaluated user 30000 of 50446\n",
+      "Evaluated user 40000 of 50446\n",
+      "Evaluated user 50000 of 50446\n",
+      "Recommender performance is: Precision = 0.0002, Recall = 0.0001, MAP = 0.0002\n",
+      "Time required 0.64 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "evaluate_algorithm(URM_test)\n",
+    "\n",
+    "print(\"Time required {:.2f} min\".format((time.time()-start_time)/60))"
    ]
   }
  ],
