--- a/code/work_in_progress.ipynb
+++ b/code/work_in_progress.ipynb
@@ -12,6 +12,8 @@
     "import time\n",
     "import sys\n",
     "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "import matplotlib.pyplot as pyplot\n",
+    "from data_splitter import train_test_holdout\n",
     "\n",
     "# addresses of the files\n",
     "train_file = '../data/train.csv'\n",
@@ -67,22 +69,28 @@
     "    while index < 9:\n",
     "        file.write(str(tracks[index]) + ' ')\n",
     "        index += 1\n",
-    "    file.write(str(tracks[index]) + '\\n')\n",
+    "    file.write(str(tracks[index]) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class collaborative_filtering_recommender(object):\n",
     "    \n",
-    "class ItemCBFKNNRecommender(object):\n",
-    "    \n",
-    "    def __init__(self, URM, ICM):\n",
+    "    def __init__(self, URM):\n",
     "        self.URM = URM\n",
-    "        self.ICM = ICM\n",
     "        \n",
     "            \n",
-    "    def fit(self, topK=50, shrink=100, normalize = True, similarity = \"cosine\"):\n",
+    "    def fit(self, topK=50, shrink=5, normalize = True, similarity = \"cosine\"):\n",
     "        \n",
-    "        similarity_object = Compute_Similarity_Python(self.ICM.T, shrink=shrink, \n",
+    "        similarity_object = Compute_Similarity_Python(self.URM.T, shrink=shrink, \n",
     "                                                  topK=topK, normalize=normalize, \n",
     "                                                  similarity = similarity)\n",
     "        \n",
-    "        self.W_sparse = similarity_object.compute_similarity()\n",
+    "        self.sim_matrix = similarity_object.compute_similarity()\n",
     "\n",
     "        \n",
     "    def recommend(self, user_id, at=None, exclude_seen=True):\n",
@@ -113,13 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_splitter import train_test_holdout\n",
-    "\n",
-    "\n",
     "URM_train, URM_test = train_test_holdout(URM_csr, train_perc = 0.8)\n",
     "\n",
     "\n",
@@ -129,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,13 +143,93 @@
        "(50446, 20635)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(URM_csr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50446, 20635)"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.shape(URM_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50446, 20635)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(URM_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instance of the recommender\n",
+    "recommender = collaborative_filtering_recommender(URM_train, ICM_csr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k tuning\n",
+    "x_tick = [150, 250]\n",
+    "MAP_per_k = []\n",
+    "\n",
+    "for topK in x_tick:\n",
+    "    \n",
+    "    recommender.fit(shrink=0.0, topK=topK)\n",
+    "    \n",
+    "    result_dict = evaluate_algorithm(URM_test, recommender)\n",
+    "    MAP_per_k.append(result_dict[\"MAP\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyplot.plot(x_tick, MAP_per_k)\n",
+    "pyplot.ylabel('MAP')\n",
+    "pyplot.xlabel('TopK')\n",
+    "pyplot.show()"
    ]
   },
   {
@@ -168,8 +253,7 @@
     }
    ],
    "source": [
-    "recommender = ItemCBFKNNRecommender(URM_train, ICM_csr)\n",
-    "\n",
+    "# shirinking term tuning\n",
     "x_tick = [1000]\n",
     "MAP_per_shrinkage = []\n",
     "\n",
@@ -210,164 +294,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity column 26200 ( 52 % ), 871.92 column/sec, elapsed time 0.50 min\n",
+      "Similarity column 50400 ( 100 % ), 879.81 column/sec, elapsed time 0.95 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "similarity_object = Compute_Similarity_Python(URM_csr.T, shrink=5, topK=50, normalize=True, similarity = \"cosine\")\n",
+    "\n",
+    "sim_matrix = similarity_object.compute_similarity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "import scipy as sc\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "from scipy import sparse\n",
-    "\n",
-    "from pandas import DataFrame\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from sklearn import feature_extraction\n",
-    "\n",
-    "from time import sleep\n",
-    "\n",
-    "from scipy.sparse.linalg import svds\n",
-    "\n",
-    "from Builder import Builder\n",
-    "\n",
-    "from MFBPR import MFBPR\n",
-    "\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "Collaborative filtering recommender with cosine similarity.\n",
-    "\n",
-    "The similarity matrix S_UCM is computed with the dot product between the UCM with\n",
-    "\n",
-    "TfIdf and its transpose. \n",
-    "\n",
-    "\n",
-    "\n",
-    "If is_test is true, return a dataframe ready to be evaluated with the Evaluator class,\n",
-    "\n",
-    "otherwise return a dataframe in the submission format.\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "class CollaborativeFilteringRec(object):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "\n",
-    "        self.URM = None\n",
-    "\n",
-    "        self.target_playlists = None\n",
-    "\n",
-    "        self.target_tracks = None\n",
-    "\n",
-    "        self.num_playlist_to_recommend = 0\n",
-    "\n",
-    "        self.S_UCM = None\n",
-    "\n",
-    "        self.is_test = False\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def fit(self, URM, target_playlists, target_tracks, num_playlist_to_recommend,\n",
-    "\n",
-    "            S_UCM, is_test):\n",
-    "\n",
-    "\n",
-    "\n",
-    "        self.URM = URM\n",
-    "\n",
-    "        self.target_playlists = target_playlists,\n",
-    "\n",
-    "        self.target_tracks = target_tracks,\n",
-    "\n",
-    "        self.num_playlist_to_recommend = num_playlist_to_recommend\n",
-    "\n",
-    "        self.S_UCM = S_UCM\n",
-    "\n",
-    "        self.is_test = is_test\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def recommend(self):\n",
-    "\n",
-    "        # Compute the indices of the non-target playlists\n",
-    "\n",
-    "        b = Builder()\n",
-    "\n",
-    "        nontarget_indices = b.get_nontarget_indices(self.target_tracks)\n",
-    "\n",
-    "\n",
-    "\n",
-    "        # Initialize the dataframe\n",
-    "\n",
-    "        dataframe_list = []\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        print('Predicting...', flush=True)\n",
-    "\n",
-    "        for i in tqdm(range(0, self.num_playlist_to_recommend)):\n",
-    "\n",
-    "\n",
-    "\n",
-    "            # Iterate over indices of target playlists\n",
-    "\n",
-    "            index = b.get_target_playlist_index(self.target_playlists[0][i])\n",
-    "\n",
-    "\n",
-    "\n",
-    "            # Compute the indices of the known tracks\n",
-    "\n",
-    "            known_indices = np.nonzero(self.URM[index].toarray().flatten())\n",
-    "\n",
-    "\n",
-    "\n",
-    "            # Calculate a row of the new URM\n",
-    "\n",
-    "            URM_row = self.URM[index, :] * self.S_UCM\n",
-    "\n",
-    "\n",
-    "\n",
-    "            # Make prediction\n",
-    "\n",
-    "            URM_row_flatten = URM_row.toarray().flatten()\n",
-    "\n",
-    "            top_5_indices = b.get_top_5_indices(URM_row_flatten, nontarget_indices, known_indices, [])\n",
-    "\n",
-    "            top_5_tracks = b.get_top_5_tracks_from_indices(top_5_indices)\n",
-    "\n",
-    "            top_5_tracks_string = ' '.join([str(i) for i in top_5_tracks])\n",
-    "\n",
-    "\n",
-    "\n",
-    "            # Create dataset\n",
-    "\n",
-    "            if self.is_test:\n",
-    "\n",
-    "                dataframe_list.append([self.target_playlists[0][i], top_5_tracks])\n",
-    "\n",
-    "            else:\n",
-    "\n",
-    "                dataframe_list.append([self.target_playlists[0][i], top_5_tracks_string])\n",
-    "\n",
-    "\n",
-    "\n",
-    "        dataframe = pd.DataFrame(dataframe_list, columns=['playlist_id', 'track_ids'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "        return dataframe"
+    "S = URM_csr.dot(URM_csr.T)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S_T = URM_csr.T.dot(URM_csr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20635, 20635)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(S_T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50446, 50446)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(sim_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50446, 50446)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_matrices(a, b):\n",
+    "    return b - b.multiply(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 0)\tTrue\n",
+      "  (0, 58)\tTrue\n",
+      "  (0, 249)\tTrue\n",
+      "  (0, 277)\tTrue\n",
+      "  (0, 1029)\tTrue\n",
+      "  (0, 1321)\tTrue\n",
+      "  (0, 1441)\tTrue\n",
+      "  (0, 1617)\tTrue\n",
+      "  (0, 2227)\tTrue\n",
+      "  (0, 2389)\tTrue\n",
+      "  (0, 3194)\tTrue\n",
+      "  (0, 3927)\tTrue\n",
+      "  (0, 4402)\tTrue\n",
+      "  (0, 4472)\tTrue\n",
+      "  (0, 4561)\tTrue\n",
+      "  (0, 4737)\tTrue\n",
+      "  (0, 5370)\tTrue\n",
+      "  (0, 5627)\tTrue\n",
+      "  (0, 5807)\tTrue\n",
+      "  (0, 6267)\tTrue\n",
+      "  (0, 6891)\tTrue\n",
+      "  (0, 7289)\tTrue\n",
+      "  (0, 7309)\tTrue\n",
+      "  (0, 7471)\tTrue\n",
+      "  (0, 7882)\tTrue\n",
+      "  :\t:\n",
+      "  (50445, 43183)\tTrue\n",
+      "  (50445, 43475)\tTrue\n",
+      "  (50445, 43479)\tTrue\n",
+      "  (50445, 44139)\tTrue\n",
+      "  (50445, 44418)\tTrue\n",
+      "  (50445, 44893)\tTrue\n",
+      "  (50445, 45042)\tTrue\n",
+      "  (50445, 45268)\tTrue\n",
+      "  (50445, 46144)\tTrue\n",
+      "  (50445, 46401)\tTrue\n",
+      "  (50445, 46403)\tTrue\n",
+      "  (50445, 46482)\tTrue\n",
+      "  (50445, 46786)\tTrue\n",
+      "  (50445, 47082)\tTrue\n",
+      "  (50445, 47879)\tTrue\n",
+      "  (50445, 48135)\tTrue\n",
+      "  (50445, 48346)\tTrue\n",
+      "  (50445, 48448)\tTrue\n",
+      "  (50445, 48475)\tTrue\n",
+      "  (50445, 49115)\tTrue\n",
+      "  (50445, 49222)\tTrue\n",
+      "  (50445, 49268)\tTrue\n",
+      "  (50445, 49378)\tTrue\n",
+      "  (50445, 50091)\tTrue\n",
+      "  (50445, 50256)\tTrue\n",
+      "Time: 7.84\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "print(S != sim_matrix)\n",
+    "print(\"Time: {:.2f}\".format(time.time()-start))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
