--- a/code/item_based.ipynb
+++ b/code/item_based.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
     "        self.URM = URM\n",
     "        \n",
     "            \n",
-    "    def fit(self, topK=50, shrink=100, normalize = True, similarity = \"tversky\"):\n",
+    "    def fit(self, topK=50, shrink=100, normalize = True, similarity = \"cosine\"):\n",
     "        \n",
     "        similarity_object = Compute_Similarity_Python(self.URM, shrink=shrink, \n",
     "                                                  topK=topK, normalize=normalize, \n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "(50446, 20635)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "(50446, 20635)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "(50446, 20635)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,26 +223,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Similarity column 16800 ( 81 % ), 557.81 column/sec, elapsed time 0.50 min\n",
-      "Similarity column 20600 ( 100 % ), 549.23 column/sec, elapsed time 0.63 min\n"
+      "Similarity column 14700 ( 71 % ), 487.47 column/sec, elapsed time 0.50 min\n",
+      "Similarity column 20600 ( 100 % ), 524.56 column/sec, elapsed time 0.65 min\n"
      ]
     }
    ],
    "source": [
-    "recommender = ItemCBFKNNRecommender(URM_csr)\n",
-    "recommender.fit(shrink=0.0, topK=200)"
+    "recommender = ItemCBFKNNRecommender(URM_train)\n",
+    "recommender.fit(shrink=5, topK=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,18 +255,71 @@
       "Evaluated user 30000 of 50446\n",
       "Evaluated user 40000 of 50446\n",
       "Evaluated user 50000 of 50446\n",
-      "Recommender performance is: Precision = 0.1586, Recall = 0.1419, MAP = 0.1112\n"
+      "Recommender performance is: Precision = 0.1617, Recall = 0.1460, MAP = 0.1160\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'precision': 0.15859561278018344,\n",
-       " 'recall': 0.14189841678967327,\n",
-       " 'MAP': 0.11124659328531498}"
+       "{'precision': 0.16172729079707832,\n",
+       " 'recall': 0.1459646557968756,\n",
+       " 'MAP': 0.11604565245803936}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_algorithm(URM_test, recommender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity column 20600 ( 100 % ), 809.38 column/sec, elapsed time 0.42 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommender = ItemCBFKNNRecommender(URM_train)\n",
+    "recommender.fit(shrink=5, topK=100, normalize=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluated user 0 of 50446\n",
+      "Evaluated user 10000 of 50446\n",
+      "Evaluated user 20000 of 50446\n",
+      "Evaluated user 30000 of 50446\n",
+      "Evaluated user 40000 of 50446\n",
+      "Evaluated user 50000 of 50446\n",
+      "Recommender performance is: Precision = 0.1405, Recall = 0.1277, MAP = 0.0970\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'precision': 0.14052474657127562,\n",
+       " 'recall': 0.12768927953597986,\n",
+       " 'MAP': 0.09704974020608854}"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
